--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/styled-components": "^5.1.14",
     "axios": "^0.21.4",
     "miragejs": "^0.1.41",
+    "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
